WebCore: misalignment because of float:left of <div> tag https://bugs.webkit.org/show_bug.cgi?id=15869

Reviewed by Simon Fraser.

One section of http://edgar.sec.gov site draws to the right of the rest
of the content
<rdar://problem/7135951>

Tests: fast/block/float/avoidance-percent-width-compat.html
       fast/block/float/avoidance-percent-width-strict.html

* rendering/RenderBlock.cpp:
(WebCore::RenderBlock::getClearDelta): Changed to apply the same float
    avoidance logic in strict mode and in compatibility mode, which
    matches Firefox and IE. Changed to compute and use the computed
    width of the child, instead of ignoring non-fixed widths.

LayoutTests: misalignment because of float:left of <div> tag
https://bugs.webkit.org/show_bug.cgi?id=15869

Reviewed by Simon Fraser.

One section of http://edgar.sec.gov site draws to the right of the rest
of the content
<rdar://problem/7135951>

* fast/block/float/avoidance-percent-width-compat.html: Added.
* fast/block/float/avoidance-percent-width-strict.html: Added.
* platform/mac/fast/block/float/035-expected.checksum:
* platform/mac/fast/block/float/035-expected.png:
* platform/mac/fast/block/float/035-expected.txt:
* platform/mac/fast/block/float/avoidance-percent-width-compat-expected.checksum: Added.
* platform/mac/fast/block/float/avoidance-percent-width-compat-expected.png: Added.
* platform/mac/fast/block/float/avoidance-percent-width-compat-expected.txt: Added.
* platform/mac/fast/block/float/avoidance-percent-width-strict-expected.checksum: Added.
* platform/mac/fast/block/float/avoidance-percent-width-strict-expected.png: Added.
* platform/mac/fast/block/float/avoidance-percent-width-strict-expected.txt: Added.
* platform/mac/fast/block/float/float-avoidance-expected.checksum:
* platform/mac/fast/block/float/float-avoidance-expected.png:
* platform/mac/fast/block/float/float-avoidance-expected.txt:
* platform/mac/fast/overflow/004-expected.checksum:
* platform/mac/fast/overflow/004-expected.png:
* platform/mac/fast/overflow/004-expected.txt:
* platform/mac/tables/mozilla/bugs/bug106158-1-expected.checksum:
* platform/mac/tables/mozilla/bugs/bug106158-1-expected.png:
* platform/mac/tables/mozilla/bugs/bug106158-1-expected.txt:
* platform/mac/tables/mozilla/bugs/bug106158-2-expected.checksum:
* platform/mac/tables/mozilla/bugs/bug106158-2-expected.png:
* platform/mac/tables/mozilla/bugs/bug106158-2-expected.txt:



Canonical link: https://commits.webkit.org/38856@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@47255 268f45cc-cd09-0410-ab3c-d52691b4dbfc